[package]
name = "rust-hv-tp"
version = "0.1.0"
authors = ["Haiaty Varotto <haiaty.varotto@nubilaria.com>"]
edition = "2018"

[lib]
name = "mylib"
path = "src/lib.rs"

[[bin]]
name = "hv-tp-rust"
path = "src/main.rs"


[dependencies]
sawtooth-sdk = "0.5.0"
rust-crypto = "0.2"
log = "0.4"
log4rs = "0.8"

[features]
default = []

stable = []

experimental = [
    # The experimental feature extends stable:
    "stable",
    # The following features are experimental:
]